--- a/Game/app/src/main/AndroidManifest.xml
+++ b/Game/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".menu.Menu"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -19,7 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".menu.Options" >
+        <activity android:name=".menu.Options"
+            android:screenOrientation="landscape"
+            >
         </activity>
     </application>
 
