Commit de Thomas (fail internet sur mon ordi) + Texturage du menu
Thomas a changé les crédit + options en A Propos, les options seront
désormais directement dans le menu principal (le son quoi)
Moi j'ai texturé le menu et les boutons et mis en place

--- a/Game/app/src/main/AndroidManifest.xml
+++ b/Game/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             >
 
         </activity>
-        <activity android:name=".menu.Options"
+        <activity android:name=".menu.Apropos"
             android:screenOrientation="landscape"
             >
         </activity>
